# RAGPlan

./: .gitignore  README.md  langgraph.json  main.py  pyproject.toml  requirements.txt
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
admin-ui/: index.html  package-lock.json  package.json  tailwind.config.js
admin-ui/src/: App.jsx  index.css
admin-ui/src/components/: DocumentTable.jsx  Sidebar.jsx  UploadCard.jsx
admin-ui/src/layouts/: MainLayout.jsx
admin-ui/src/pages/: DocumentsPage.jsx  UploadPage.jsx
app/: __init__.py  config.py  graph.py  rag.py  server.py  server_dev.py  tool.py
app/admin/: __init__.py
app/admin/routers/: admin.py  config.py  knowledge.py  monitoring.py
app/admin/schemas/: __init__.py  auth.py  config.py  knowledge.py  monitoring.py
app/admin/security/: __init__.py  auth.py  dependencies.py
app/admin/services/: __init__.py  knowledge_service.py  monitoring_service.py
app/user/: __init__.py
app/user/routers/: chat.py
app/user/schemas/: chat.py
app/user/services/: chat_service.py
frontend/: package-lock.json  package.json
frontend/admin-ui/: package.json
frontend/admin-ui/src/components/: DocumentTable.jsx  UploadCard.jsx
frontend/admin-ui/src/layouts/: MainLayout.jsx
frontend/user-ui/src/: App.jsx
scratch/: create_pdf.py  test_graph.py  test_rag_list.py
scripts/: test_user_api.py
user-ui/: package-lock.json  package.json
user-ui/src/: App.jsx  index.css
user-ui/src/components/: Sidebar.jsx
(+1 files in other folders)
