[project]
name = "ragplan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-openai>=0.3.0,<0.4.0",
    "langgraph>=0.2.56,<0.4.0",
    "langgraph-cli[inmem]>=0.2.0,<0.3.0",
    "langserve>=0.2.3",
    "langsmith>=0.1.112,<0.2.0",
    "fastapi>=0.136.1",
    "httpx==0.27.2",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "openai>=1.26.0",
    "pinecone>=6.0.0",
]
